--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name='viewport' content="width=device-width, intial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?selection.family=Raleway">
@@ -9,15 +10,15 @@
 <body>
     <header>
      <nav>
-         Home
-         About 
-         Contact
+         <a href= 'index.html'>Home</a>
+         <a href= 'about.html'>About</a>
+         <a href= 'contact.html'>Contact</a>
      </nav>    
     </header>
     <section class="title-container">
        
-               50 Influential Artists
-               Contact Us
+               <h1>50 Influential Artists</h1>
+               <button>Contact Us</button>
           
         <hr>
     </section>
