added navigation and layout adjustments

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section class="title-container">
        
                <h1>50 Influential Artists</h1>
-               <button>Contact Us</button>
-          
-        <hr>
+               <button>Contact Us</button>  
     </section>
+
+    <hr width= '100%'> 
 
     <section class="artists-container">
         <div class="artist">
